examples/test/testpolicy11981.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11981
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key11: value10
      key26: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value3
          key48: value49
          key33: value7
      podSelector:
        matchLabels:
          key0: value49
          key23: value22
          key45: value9
